books-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "version v1.0"
  name: books-service
  labels:
    service: books
spec:
  minReadySeconds: 5
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      service: books
  template:
    metadata:
      name: books-service-pod
      labels:
        service: books
    spec:
      automountServiceAccountToken: false
      containers:
        - name: books-service-container
          image: shaikkhajaibrahim/libbookssvc:1.0
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 64Mi
              cpu: 100m
            limits:
              memory: 300Mi
              cpu: 500m

---

apiVersion: v1
kind: Service
metadata:
  name: books-svc
spec:
  type: ClusterIP
  selector:
    service: books
  ports:
    - port: 8000
      targetPort: 8000
